objects/Activity.object
<CustomObject>
    <fields>
        <fullName>BICE_Alert__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>1. Allow the tracking of alerts in activities for reporting
2. Make it possible to generate multiple tasks from the same alert</description>
        <label>BICE Alert</label>
        <referenceTo>BICE_Alert__c</referenceTo>
        <relationshipLabel>Actividades</relationshipLabel>
        <relationshipName>Actividades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estado_de_actividad__c</fullName>
        <label>Estado de actividad</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Programada</fullName>
                    <color>#FF6600</color>
                    <label>Programada</label>
                </value>
                <value>
                    <fullName>Realizada</fullName>
                    <color>#009900</color>
                    <label>Realizada</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Etapa_de_tarea__c</fullName>
        <label>Etapa de tarea</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contacto</fullName>
                </value>
                <value>
                    <fullName>Precalificación</fullName>
                </value>
                <value>
                    <fullName>Calificación</fullName>
                </value>
                <value>
                    <fullName>Otorgamiento</fullName>
                </value>
                <value>
                    <fullName>Cerrada Ganada</fullName>
                </value>
                <value>
                    <fullName>Cerrada Perdida</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resultado__c</fullName>
        <inlineHelpText>Ingrese aquí información importante resultante de la cita realizada</inlineHelpText>
        <label>Resultado:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sucursal__c</fullName>
        <label>Sucursal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>